--- a/dogname.html
+++ b/dogname.html
@@ -164,6 +164,10 @@
                            required>
                 </div>
                 <button type="submit" class="next-button">Next</button>
+                <div class="section visually-hidden">
+                    <div class="section-title">Name</div>
+                    <div class="section-value" id="gender">Buddy</div>
+                </div>
             </div>
         </form>
     </div>
