--- a/issues.html
+++ b/issues.html
@@ -12,6 +12,7 @@
         body {
             background-color: #173B33;
             font-family: 'Raleway', sans-serif;
+            align-content:center
         }
 
         .main-container {
