--- a/create.html
+++ b/create.html
@@ -251,10 +251,14 @@
                 $("#nif-error").text("Insira um NIF válido.");
             }
 
-            if (viewModel.password() !== viewModel.confirmPassword()) {
+            if (!viewModel.password().trim()) {
+                valid = false;
+                $("#password-error").text("A senha é obrigatória.");
+            } else if (viewModel.password() !== viewModel.confirmPassword()) {
                 valid = false;
                 $("#confirm-password-error").text("As senhas não coincidem.");
             }
+
 
             // Check if the email or phone already exists in localStorage
             if (localStorage.getItem(viewModel.email())) {
@@ -270,11 +274,6 @@
             if (!$('#invalidCheck').is(':checked')) {
                 valid = false;
                 alert("Você deve concordar com os Termos e Condições.");
-            }
-
-            if (!viewModel.password().trim()) {
-                valid = false;
-                $("#password-error").text("A senha é obrigatória.");
             }
 
             if (valid) {
