--- a/login.html
+++ b/login.html
@@ -141,7 +141,7 @@
                     $("#password-error").text("Senha incorreta.");
                 } else {
                     console.log("Usuário logado com sucesso:", userData);
-                    window.location.replace("homepage.html");
+                    window.location.replace("http://127.0.0.1:5501/howmany.html");
                 }
             }
         });
